--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "ethers": "^5.7.2",
+    "fs-extra": "^11.1.0",
     "graphql": "^16.6.0",
     "hardhat": "^2.12.5",
     "ipfs-http-client": "^59.0.0",
