--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@livepeer/react": "^1.5.6",
     "@next/font": "13.1.1",
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
